<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:text="@string/title_home_team"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/homeTeamTV"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:text="@string/title_away_team"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/awayTeamTV"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:text="@string/title_status_team"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/statusTV"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:text="@string/title_goals_home_team"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/homeTeamGoalTV"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:text="@string/title_goals_away_team"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/awayTeamGoalTV"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:text="@string/title_date_team"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>